# ImageOperations

./: CMakeLists.txt  main.cpp
SimpleEdgeDetection/: CMakeLists.txt  canny.cpp  canny.h  edge_detector.cpp  edge_detector.h  kernel.cpp  kernel.h
